# API-Hooking

./: README.md
01 The Target Application/: Readme.txt  source.cpp
02 The HookDLL/: CMakeLists.txt  HookDLL.cpp
03 The DLL Injector/: CMakelists.txt  Injector.cpp
